compiler-core/src/parse/snapshots/rakun_core__parse__tests__assignment_pattern_invalid_bit_segment.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    let <<b1, pub>> = <<24, 3>>\n}\n"
---
----- SOURCE CODE

fn main() {
    let <<b1, pub>> = <<24, 3>>
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:15
  │
3 │     let <<b1, pub>> = <<24, 3>>
  │               ^^^ I was not expecting this

Found the keyword `pub`, expected one of: 
- `>>`
- a bit array segment pattern
