compiler-core/src/parse/snapshots/rakun_core__parse__tests__attributes_with_no_definition.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 658
expression: "\n@deprecated(\"1\")\n@target(erlang)\n"
---
----- SOURCE CODE

@deprecated("1")
@target(erlang)


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:1
  │  
2 │ ╭ @deprecated("1")
3 │ │ @target(erlang)
  │ ╰───────────────^ I was expecting a definition after this
