compiler-core/src/parse/snapshots/rakun_core__parse__tests__block_of_two.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 548
expression: "{ 1 2 }"
---
[
    Expression(
        Block {
            location: SrcSpan {
                start: 0,
                end: 7,
            },
            statements: [
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 2,
                            end: 3,
                        },
                        value: "1",
                        int_value: 1,
                    },
                ),
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 4,
                            end: 5,
                        },
                        value: "2",
                        int_value: 2,
                    },
                ),
            ],
        },
    ),
]
