compiler-core/src/parse/snapshots/rakun_core__parse__tests__const_invalid_list.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst a = [1, 2, <-]\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:2:18
  │
2 │ const a = [1, 2, <-]
  │                  ^^ I was not expecting this

Found `<-`, expected one of: 
- `]`
- a constant value
